--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-pandas
-numpy
-matplotlib
-openpyxl
-seaborn
+pandas~=1.5.1
+numpy~=1.23.4
+matplotlib~=3.6.0
+openpyxl~=3.0.10
+seaborn~=0.12.1
+setuptools~=60.2.0
+pip~=21.3.1
+wheel~=0.37.1
+Pillow~=9.3.0
+pytz~=2022.5
+python-dateutil~=2.8.2
+scipy~=1.9.3
+six~=1.16.0
+packaging~=21.3
+pyparsing~=3.0.9
+scikit-learn~=1.1.3
